SSB-178: fixed alignment issue in first level category

--- a/app/design/frontend/Alfakher/globalhookah/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Alfakher/globalhookah/Magento_Catalog/web/css/source/_module.less
@@ -1997,7 +1997,6 @@
                 width: 300px;
                 .block-title {
                     border-bottom: none;
-                    font-family: @montserrat_regular;
                     line-height: 1.3;
                     margin: 0;
                     &::before {
@@ -2391,7 +2390,6 @@
         .sidebar {
             .block-title {
                 border-bottom: none;
-                font-family: @montserrat_regular;
                 line-height: 1.3;
                 margin: 0 !important;
                 &::before {
