--- a/app/design/frontend/Alfakher/globalhookah/Magento_Catalog/web/css/source/module/_listings.less
+++ b/app/design/frontend/Alfakher/globalhookah/Magento_Catalog/web/css/source/module/_listings.less
@@ -215,7 +215,7 @@
             }
 
             .price-box {
-                margin: @indent__s 0 20px;
+                margin: @indent__s 0 0;
                 text-align: left;
 
                 .price {
@@ -380,7 +380,6 @@
                 }
             }
             .actions-primary {
-                margin-top: 1rem;
                 text-align: left;
             }
         }
@@ -546,7 +545,8 @@
             }
             &-details {
                 .stock.unavailable {
-                    font-size: 0.813rem;
+                    font-size: 1.2rem;
+                    text-align: left;
                 }
                 .product-item-brand {
                     .lib-font-size(12);
