--- a/app/design/frontend/Alfakher/globalhookah/Magento_LayeredNavigation/web/css/source/_module.less
+++ b/app/design/frontend/Alfakher/globalhookah/Magento_LayeredNavigation/web/css/source/_module.less
@@ -210,7 +210,7 @@
 
     .block-subtitle {
         display: inline-block;
-        font-size: 0.938rem;
+        font-size: 1.5rem;
         font-weight: @font-weight__bold;
         margin-bottom: @indent__s + 2;
 
@@ -243,7 +243,6 @@
 
         +.filter-actions {
             color: @color-black;
-            font-size: 0.75rem;
             position: absolute;
             right: 0;
             top: @indent__base - 2px;
@@ -251,7 +250,7 @@
             a {
                 color: @color-black;
                 text-decoration: underline;
-                font-size: 0.75rem;
+                font-size: 1.2rem;
 
                 &:hover,
                 &:active {
@@ -418,7 +417,7 @@
                     margin-left: auto;
                     margin-right: auto;
                     &:after {
-                        content: ' By (' attr(data-count) ')';
+                        content: ' (' attr(data-count) ')';
                     }
                 }
 
